Update download links and badges in landing page

--- a/landing-tr.html
+++ b/landing-tr.html
@@ -472,12 +472,13 @@
             <p class="tagline">Yapay zeka destekli ebeveynlik yardımcınız<br>7/24 destek • Kişiselleştirilmiş tavsiyeler • Akıllı bildirimler</p>
             
             <div>
-                <a href="#" class="cta-button">App Store'dan İndir</a>
+                <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">App Store'dan İndir</a>
+                <a href="https://play.google.com/store/apps/details?id=com.babee" class="cta-button" target="_blank" rel="noopener noreferrer" style="background: linear-gradient(135deg, #34A853, #4285F4);">Google Play'den İndir</a>
                 <a href="#features" class="cta-button cta-secondary">Daha Fazla Bilgi</a>
             </div>
 
             <div class="hero-badges">
-                <span class="badge">📱 iOS 14.0+</span>
+                <span class="badge">📱 iOS 14.0+ & Android 6.0+</span>
                 <span class="badge">🌍 23 Dil</span>
                 <span class="badge">💜 Ebeveynlerin Güvenilir Tercihi</span>
             </div>
@@ -568,7 +569,7 @@
                 </div>
                 
                 <div style="text-align: center; margin-top: 48px;">
-                    <a href="#" class="cta-button">Premium'u Hemen Başlat</a>
+                    <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">Premium'u Hemen Başlat</a>
                 </div>
             </div>
         </div>
@@ -600,7 +601,8 @@
         <div class="container">
             <h2>Ebeveynlik Yolculuğunuzu Dönüştürmeye Hazır Mısınız?</h2>
             <p>Kişiselleştirilmiş bebek bakım desteği için Babee'ye güvenen binlerce ebeveyne katılın</p>
-            <a href="#" class="cta-button">Babee'yi Hemen İndirin</a>
+            <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">App Store'dan İndir</a>
+            <a href="https://play.google.com/store/apps/details?id=com.babee" class="cta-button" target="_blank" rel="noopener noreferrer" style="background: linear-gradient(135deg, #34A853, #4285F4); margin-left: 10px;">Google Play'den İndir</a>
         </div>
     </div>
 
