--- a/landing.html
+++ b/landing.html
@@ -472,12 +472,13 @@
             <p class="tagline">Your AI-powered parenting companion<br>24/7 support • Personalized advice • Smart notifications</p>
             
             <div>
-                <a href="#" class="cta-button">Download on App Store</a>
+                <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">Download on App Store</a>
+                <a href="https://play.google.com/store/apps/details?id=com.babee" class="cta-button" target="_blank" rel="noopener noreferrer" style="background: linear-gradient(135deg, #34A853, #4285F4);">Get it on Google Play</a>
                 <a href="#features" class="cta-button cta-secondary">Learn More</a>
             </div>
 
             <div class="hero-badges">
-                <span class="badge">📱 iOS 14.0+</span>
+                <span class="badge">📱 iOS 14.0+ & Android 6.0+</span>
                 <span class="badge">🌍 23 Languages</span>
                 <span class="badge">💜 Trusted by Parents</span>
             </div>
@@ -568,7 +569,7 @@
                 </div>
                 
                 <div style="text-align: center; margin-top: 48px;">
-                    <a href="#" class="cta-button">Start Premium Today</a>
+                    <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">Start Premium Today</a>
                 </div>
             </div>
         </div>
@@ -600,7 +601,8 @@
         <div class="container">
             <h2>Ready to Transform Your Parenting Journey?</h2>
             <p>Join thousands of parents who trust Babee for personalized baby care support</p>
-            <a href="#" class="cta-button">Download Babee Now</a>
+            <a href="https://apps.apple.com/us/app/babee-your-baby-expert/id6754639194" class="cta-button" target="_blank" rel="noopener noreferrer">Download on App Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.babee" class="cta-button" target="_blank" rel="noopener noreferrer" style="background: linear-gradient(135deg, #34A853, #4285F4); margin-left: 10px;">Get it on Google Play</a>
         </div>
     </div>
 
